- 회원가입, 로그인 작업 완료 - 회원가입 페이지 레이아웃 x - header 작업 완료

--- a/MBoardProject/Views/Board/BoardView.cshtml
+++ b/MBoardProject/Views/Board/BoardView.cshtml
@@ -6,7 +6,7 @@
 <link href="~/Content/custom/board.css" rel="stylesheet" />
 <script>
     let _login = JSON.parse('@Html.Raw(ViewBag.Login)');
-
+    let _title = '@Html.Raw(ViewBag.Title)';
 </script>
 <script src="~/Scripts/custom/common.js"></script>
 <script src="~/Scripts/custom/board.js"></script>
@@ -42,7 +42,7 @@
     </div>
     <div class="header_box">
         <h2>
-            Board
+            BoardView
         </h2>
     </div>
     <div class="contents_box">
