--- a/MBoardProject/Content/custom/boardview.css
+++ b/MBoardProject/Content/custom/boardview.css
@@ -1,52 +1,4 @@
-﻿#wrap {
-    position: relative;
-    top: 40px;
-    display: flex;
-    flex-direction: column;
-    width: 90%;
-    background: #808080;
-    margin: 0 auto;
-    max-width: 1200px;
-}
-
-    #wrap div {
-        box-sizing: border-box;
-    }
-
-    /* info 영역 */
-    .info_box {
-        order: 0;
-        position: fixed;
-        top: 0px;
-        margin: 0;
-        z-index: 30;
-        display: flex;
-        flex-direction: row;
-        justify-content: flex-end;
-        align-items: center;
-        width: 90%;
-        max-width: 1200px;
-        height: 40px;
-        background: #ff0000;
-    }
-
-.info_box > div {
-    margin-left: 20px;
-    
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.info_box > div > * {
-    margin-left: 10px;
-}
-
-    .info_box > div:first-child {
-        margin-left: 0;
-    }
-
+﻿/*인포 영역 - 검색*/
 .search_select_box {
     display: inline-block;
     position: relative;
@@ -91,18 +43,6 @@
 .search_select_box:hover .search_select_list {
     display: block;
 }
-
-
-    /* header 영역 */
-    #wrap .header_box {
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 100px;
-        background: #ff6a00;
-    }
 
     /* contents 영역 */
     #wrap .contents_box {
