--- a/MBoardProject/Views/Board/BoardView.cshtml
+++ b/MBoardProject/Views/Board/BoardView.cshtml
@@ -3,28 +3,21 @@
     ViewBag.Title = "BoardView";
 }
 
-<link href="~/Content/custom/board.css" rel="stylesheet" />
+<link href="~/Content/custom/layout.css" rel="stylesheet" />
+<link href="~/Content/custom/boardview.css" rel="stylesheet" />
+
 <script>
     let _login = JSON.parse('@Html.Raw(ViewBag.Login)');
     let _title = '@Html.Raw(ViewBag.Title)';
 </script>
 <script src="~/Scripts/custom/common.js"></script>
-<script src="~/Scripts/custom/board.js"></script>
+<script src="~/Scripts/custom/login.js"></script>
+<script src="~/Scripts/custom/layout.js"></script>
+
+<script src="~/Scripts/custom/boardview.js"></script>
 
 <div id="wrap">
     <div class="info_box">
-        <div class="login_box">
-            <form id="form1" action="/Board/UserLogin" enctype="multipart/form-data" method="post">
-                <input type="text" name="USERID" class="id_window" placeholder="아이디">
-                <input type="password" name="USERPW" class="pw_window" placeholder="비밀번호">
-            </form>
-            <div class="login_btn custom_btn ">로그인</div>
-            <div class="join_btn custom_btn ">가입</div>
-        </div>
-        <div class="logout_box">
-            <div class="username">사용자</div>
-            <div class="logout_btn">로그아웃</div>
-        </div>
         <div class="search_box">
             <form action="#" method="get">
                 <div class="search_select_box">
@@ -38,6 +31,18 @@
                 <input type="search" name="search_window" class="search_window" placeholder="검색어">
             </form>
             <div class="search_btn custom_btn">검색</div>
+        </div>
+        <div class="login_box">
+            <form id="form1" action="/Board/UserLogin" enctype="multipart/form-data" method="post">
+                <input type="text" name="USERID" class="id_window" placeholder="아이디">
+                <input type="password" name="USERPW" class="pw_window" placeholder="비밀번호">
+            </form>
+            <div class="login_btn custom_btn ">로그인</div>
+            <div class="join_btn custom_btn ">가입</div>
+        </div>
+        <div class="logout_box">
+            <div class="username">사용자</div>
+            <div class="logout_btn">로그아웃</div>
         </div>
     </div>
     <div class="header_box">
