--- a/MBoardProject/Views/Board/JoinView.cshtml
+++ b/MBoardProject/Views/Board/JoinView.cshtml
@@ -3,26 +3,46 @@
     ViewBag.Title = "JoinView";
 }
 
-
-<link href="~/Content/custom/join.css" rel="stylesheet" />
-<script src="~/Scripts/custom/common.js"></script>
-<script src="~/Scripts/custom/join.js"></script>
+<link href="~/Content/custom/layout.css" rel="stylesheet" />
+<link href="~/Content/custom/joinview.css" rel="stylesheet" />
 
 <script>
-
+    let _login = JSON.parse('@Html.Raw(ViewBag.Login)');
+    let _title = '@Html.Raw(ViewBag.Title)';
 </script>
+<script src="~/Scripts/custom/common.js"></script>
+<script src="~/Scripts/custom/login.js"></script>
+<script src="~/Scripts/custom/layout.js"></script>
+
+<script src="~/Scripts/custom/joinview.js"></script>
 
 <div id="wrap">
+    <div class="info_box">
+        <div class="login_box">
+            <form id="form1" action="/Board/UserLogin" enctype="multipart/form-data" method="post">
+                <input type="text" name="USERID" class="id_window" placeholder="아이디">
+                <input type="password" name="USERPW" class="pw_window" placeholder="비밀번호">
+            </form>
+            <div class="login_btn custom_btn ">로그인</div>
+            <div class="join_btn custom_btn ">가입</div>
+        </div>
+        <div class="logout_box">
+            <div class="username">사용자</div>
+            <div class="logout_btn">로그아웃</div>
+        </div>
+    </div>
     <div class="header_box">
-        <h2>Join</h2>
+        <h2>
+            BoardView
+        </h2>
     </div>
     <div class="join_box">
-        <form id="form1" action="/Board/UserJoin" enctype="multipart/form-data" method="post">
+        <form id="join_form" action="/Board/UserJoin" enctype="multipart/form-data" method="post">
             <input type="text" name="USERNM" class="name_window" placeholder="사용자이름">
             <input type="text" name="USERID" class="id_window" placeholder="아이디">
             <input type="password" name="USERPW" class="pw_window" placeholder="비밀번호">
         </form>
-        <div class="join_btn">가입</div>
+        <div class="join_btn custom_btn">가입</div>
     </div>
 </div>
 
