- 글쓰기창 완료

--- a/MBoardProject/Views/Board/JoinView.cshtml
+++ b/MBoardProject/Views/Board/JoinView.cshtml
@@ -30,11 +30,14 @@
             <div class="username">사용자</div>
             <div class="logout_btn">로그아웃</div>
         </div>
+        <div class="btn_box">
+            <div class="home_btn custom_btn">홈</div>
+        </div>
     </div>
     <div class="header_box">
-        <h2>
-            BoardView
-        </h2>
+        <div id="header_title">
+            Board
+        </div>
     </div>
     <div class="join_box">
         <form id="join_form" action="/Board/UserJoin" enctype="multipart/form-data" method="post">
