--- a/MBoardProject/Views/Board/BoardView.cshtml
+++ b/MBoardProject/Views/Board/BoardView.cshtml
@@ -44,16 +44,19 @@
             <div class="username">사용자</div>
             <div class="logout_btn">로그아웃</div>
         </div>
+        <div class="btn_box">
+            <div class="home_btn custom_btn">홈</div>
+        </div>
     </div>
     <div class="header_box">
-        <h2>
-            BoardView
-        </h2>
+        <div id="header_title">
+            Board
+        </div>
     </div>
     <div class="contents_box">
         <div class="contents_row_1">
             <div class="contents_count">총 <span>10</span>건의 게시물</div>
-            <div class="write_btn custom_btn">글쓰기</div>
+            <div class="createFeed_btn custom_btn">글쓰기</div>
         </div>
         <div class="contents_row_2">
             <div class="table_box">
@@ -84,7 +87,7 @@
             </div>
         </div>
         <div class="contents_row_3">
-            <div class="add_view_btn custom_btn">더보기</div>
+            <div class="addFeed_btn custom_btn">더보기</div>
         </div>
     </div>
 </div>
