--- a/MBoardProject/Views/Board/CreateView.cshtml
+++ b/MBoardProject/Views/Board/CreateView.cshtml
@@ -3,5 +3,49 @@
     ViewBag.Title = "CreateView";
 }
 
-<h2>CreateView</h2>
+<link href="~/Content/custom/layout.css" rel="stylesheet" />
+<link href="~/Content/custom/createview.css" rel="stylesheet" />
+
+<script>
+    let _login = JSON.parse('@Html.Raw(ViewBag.Login)');
+    let _title = '@Html.Raw(ViewBag.Title)';
+</script>
+<script src="~/Scripts/custom/common.js"></script>
+<script src="~/Scripts/custom/login.js"></script>
+<script src="~/Scripts/custom/layout.js"></script>
+
+<script src="~/Scripts/custom/createview.js"></script>
+
+<div id="wrap">
+    <div class="info_box">
+        <div class="login_box">
+            <form id="form1" action="/Board/UserLogin" enctype="multipart/form-data" method="post">
+                <input type="text" name="USERID" class="id_window" placeholder="아이디">
+                <input type="password" name="USERPW" class="pw_window" placeholder="비밀번호">
+            </form>
+            <div class="login_btn custom_btn ">로그인</div>
+            <div class="join_btn custom_btn ">가입</div>
+        </div>
+        <div class="logout_box">
+            <div class="username">사용자</div>
+            <div class="logout_btn">로그아웃</div>
+        </div>
+        <div class="btn_box">
+            <div class="home_btn custom_btn">홈</div>
+        </div>
+    </div>
+    <div class="header_box">
+        <div id="header_title">
+            Board
+        </div>
+    </div>
+    <div class="create_box">
+        <form id="create_form" action="/Board/FeedCreate" enctype="multipart/form-data" method="post">
+            <input type="text" name="TITLE" class="title_window" placeholder="제목" />
+            <input type="text" name="CONTENTS" class="contents_window" placeholder="본문" />
+            <input type="file" name="fileDatas" class="file_windows"/>
+        </form>
+        <div class="create_btn custom_btn">저장</div>
+    </div>
+</div>
 
