--- a/MBoardProject/Views/Board/CreateView.cshtml
+++ b/MBoardProject/Views/Board/CreateView.cshtml
@@ -28,7 +28,7 @@
         </div>
         <div class="logout_box">
             <div class="username">사용자</div>
-            <div class="logout_btn">로그아웃</div>
+            <div class="logout_btn custom_btn">로그아웃</div>
         </div>
         <div class="btn_box">
             <div class="home_btn custom_btn">홈</div>
