--- a/MBoardProject/Views/Board/BoardView.cshtml
+++ b/MBoardProject/Views/Board/BoardView.cshtml
@@ -23,9 +23,8 @@
                 <div class="search_select_box">
                     <span>검색 대상</span>
                     <ul class="search_select_list">
-                        <li>제목</li>
-                        <li>내용</li>
-                        <li>작성자</li>
+                        <li column="TITLE">제목</li>
+                        <li column="CONTENTS">내용</li>
                     </ul>
                 </div>
                 <input type="search" name="search_window" class="search_window" placeholder="검색어">
@@ -42,7 +41,7 @@
         </div>
         <div class="logout_box">
             <div class="username">사용자</div>
-            <div class="logout_btn">로그아웃</div>
+            <div class="logout_btn custom_btn">로그아웃</div>
         </div>
         <div class="btn_box">
             <div class="home_btn custom_btn">홈</div>
@@ -55,12 +54,12 @@
     </div>
     <div class="contents_box">
         <div class="contents_row_1">
-            <div class="contents_count">총 <span>10</span>건의 게시물</div>
+            <div class="feed_count">총 <span>10</span>건의 게시물</div>
             <div class="createFeed_btn custom_btn">글쓰기</div>
         </div>
         <div class="contents_row_2">
             <div class="table_box">
-                <div class="tr">
+                <div class="tr table_head">
                     <div>번호</div>
                     <div>제목</div>
                     <div>작성자</div>
